--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   equatable: ^2.0.5
+  flutter_easyloading: ^3.0.5
 
   cupertino_icons: ^1.0.2
 
